--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: checks
+name: build
 
 on:
   push:
@@ -16,13 +16,3 @@ jobs:
         uses: actions/checkout@v2
       - name: Building
         run: ./scripts/build.sh
-  test:
-    name: Test
-    runs-on: macos-latest
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v2
-      - name: Force Xcode 11.3
-        run: sudo xcode-select -switch /Applications/Xcode_11.3.app
-      - name: Runing Tests
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.4,name=iPhone 11"
