--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: checks
+name: tests
 
 on:
   push:
@@ -8,16 +8,8 @@ on:
   pull_request:
 
 jobs:
-  build:
-    name: Building the SDK
-    runs-on: macos-latest
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v2
-      - name: Building
-        run: ./scripts/build.sh
-  test:
-    name: Test the SDK
+  tests:
+    name: Tests
     runs-on: macos-latest
     steps:
       - name: Checkout the repo
