--- a/WultraMobileTokenSDK.xcodeproj/xcshareddata/xcschemes/WultraMobileTokenSDK.xcscheme
+++ b/WultraMobileTokenSDK.xcodeproj/xcshareddata/xcschemes/WultraMobileTokenSDK.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DC616232248508F8000DED17"
+               BuildableName = "WultraMobileTokenSDKTests.xctest"
+               BlueprintName = "WultraMobileTokenSDKTests"
+               ReferencedContainer = "container:WultraMobileTokenSDK.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
