--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,5 +22,8 @@ jobs:
           APP_KEY: ${{ secrets.TESTS_APP_KEY }}
           APP_SECRET: ${{ secrets.TESTS_APP_SECRET }}
           MASTER_SERVER_PUBLIC_KEY : ${{ secrets.TESTS_MASTER_SERVER_PUBLIC_KEY }}
-          SERVER_IP: ${{ secrets.TESTS_SERVER_IP }}
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.4,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -server "$SERVER_IP"
+          ER_URL: ${{ secrets.TESTS_ER_URL }}
+          NS_URL: ${{ secrets.TESTS_NS_URL }}
+          OP_URL: ${{ secrets.TESTS_OP_URL }}
+          PA_URL: ${{ secrets.TESTS_PA_URL }}
+        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.4,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -ns "$NS_URL" -pa "$PA_URL"
