--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,16 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
-      - name: Force Xcode 11.3
-        run: sudo xcode-select -switch /Applications/Xcode_11.3.app
+      - name: Force Xcode 11.4
+        run: sudo xcode-select -switch /Applications/Xcode_11.4.app
       - name: Runing Tests
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.4,name=iPhone 11"
+        env:
+          APP_ID: ${{ secrets.TESTS_APP_ID }}
+          APP_KEY: ${{ secrets.TESTS_APP_KEY }}
+          APP_SECRET: ${{ secrets.TESTS_APP_SECRET }}
+          MASTER_SERVER_PUBLIC_KEY : ${{ secrets.TESTS_MASTER_SERVER_PUBLIC_KEY }}
+          ER_URL: ${{ secrets.TESTS_ER_URL }}
+          NS_URL: ${{ secrets.TESTS_NS_URL }}
+          OP_URL: ${{ secrets.TESTS_OP_URL }}
+          PA_URL: ${{ secrets.TESTS_PA_URL }}
+        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.4,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -ns "$NS_URL" -pa "$PA_URL"
