--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Make sure we're on master branch
         run: |
           [[ $GITHUB_REF == "refs/heads/master" ]] || exit 1
+      - name: Force Xcode 11.4
+        run: sudo xcode-select -switch /Applications/Xcode_11.4.app
       - name: Publish the library
         uses: kober32/library-deploy@develop
         env:
