--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,12 +10,13 @@ on:
 jobs:
   tests:
     name: Tests
-    runs-on: macos-latest
+    runs-on: macos-11.0
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
-      - name: Force Xcode 11.4
-        run: sudo xcode-select -switch /Applications/Xcode_11.4.app
+        # Xcode 11.7 until carrthage is fixed (0.37+)
+      - name: Force Xcode 11.7
+        run: sudo xcode-select -switch /Applications/Xcode_11.7.app
       - name: Runing Tests
         env:
           APP_ID: ${{ secrets.TESTS_APP_ID }}
