--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
-        # Xcode 11.7 until carrthage is fixed (0.37+)
+        # Xcode 11.7 until carthage is fixed (0.37+) 
       - name: Force Xcode 11.7
         run: sudo xcode-select -switch /Applications/Xcode_11.7.app
       - name: Runing Tests
@@ -27,4 +27,4 @@ jobs:
           NS_URL: ${{ secrets.TESTS_NS_URL }}
           OP_URL: ${{ secrets.TESTS_OP_URL }}
           PA_URL: ${{ secrets.TESTS_PA_URL }}
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.4,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -ns "$NS_URL" -pa "$PA_URL"
+        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.7,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -ns "$NS_URL" -pa "$PA_URL"
