--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,12 +10,13 @@ on:
 jobs:
   tests:
     name: Tests
-    runs-on: macos-latest
+    runs-on: macos-11.0
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
-      - name: Force Xcode 11.4
-        run: sudo xcode-select -switch /Applications/Xcode_11.4.app
+        # Xcode 11.7 until carthage is fixed (0.37+) 
+      - name: Force Xcode 11.7
+        run: sudo xcode-select -switch /Applications/Xcode_11.7.app
       - name: Runing Tests
         env:
           APP_ID: ${{ secrets.TESTS_APP_ID }}
@@ -26,4 +27,4 @@ jobs:
           NS_URL: ${{ secrets.TESTS_NS_URL }}
           OP_URL: ${{ secrets.TESTS_OP_URL }}
           PA_URL: ${{ secrets.TESTS_PA_URL }}
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.4,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -ns "$NS_URL" -pa "$PA_URL"
+        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.7,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -ns "$NS_URL" -pa "$PA_URL"
