--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,12 +19,12 @@ jobs:
         run: sudo xcode-select -switch /Applications/Xcode_11.7.app
       - name: Runing Tests
         env:
-          APP_ID: ${{ secrets.TESTS_APP_ID }}
           APP_KEY: ${{ secrets.TESTS_APP_KEY }}
           APP_SECRET: ${{ secrets.TESTS_APP_SECRET }}
           MASTER_SERVER_PUBLIC_KEY : ${{ secrets.TESTS_MASTER_SERVER_PUBLIC_KEY }}
-          ER_URL: ${{ secrets.TESTS_ER_URL }}
-          NS_URL: ${{ secrets.TESTS_NS_URL }}
+          CL_URL: ${{ secrets.TESTS_CL_URL }}
+          CL_LGN: ${{ secrets.TESTS_CL_LGN }}
+          CL_PWD: ${{ secrets.TESTS_CL_PWD }}
           OP_URL: ${{ secrets.TESTS_OP_URL }}
-          PA_URL: ${{ secrets.TESTS_PA_URL }}
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.7,name=iPhone 11" -appid "$APP_ID" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -ns "$NS_URL" -pa "$PA_URL"
+          ER_URL: ${{ secrets.TESTS_ER_URL }}
+        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=13.7,name=iPhone 11" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -cl "$CL_URL" -clu "$CL_LGN" -clp "$CL_PWD"
