Fiuxed #50: Compatibility with PowerAuth SDK 1.6

--- a/WultraMobileTokenSDK/ConfigFiles/Config.xcconfig
+++ b/WultraMobileTokenSDK/ConfigFiles/Config.xcconfig
@@ -23,7 +23,7 @@ SDKROOT = iphoneos
 IPHONEOS_DEPLOYMENT_TARGET = 10.0
 
 // FRAMEWORKS
-FRAMEWORK_SEARCH_PATHS = $(inherited) $(PROJECT_DIR)/Carthage/Build/iOS
+FRAMEWORK_SEARCH_PATHS = $(inherited) $(PROJECT_DIR)/Carthage/Build/
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/Frameworks @loader_path/Frameworks
 
 
