--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ Library/
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 #Carthage/Checkouts
-Carthage/Build
+Carthage
 
 *.jar
 
