--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,7 @@ jobs:
           CL_URL: ${{ secrets.TESTS_CL_URL }}
           CL_LGN: ${{ secrets.TESTS_CL_LGN }}
           CL_PWD: ${{ secrets.TESTS_CL_PWD }}
+          CL_AID: ${{ secrets.TESTS_CL_AID }}
           OP_URL: ${{ secrets.TESTS_OP_URL }}
           ER_URL: ${{ secrets.TESTS_ER_URL }}
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=15.2,name=iPhone SE (2nd generation)" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -cl "$CL_URL" -clu "$CL_LGN" -clp "$CL_PWD"
+        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=15.2,name=iPhone SE (2nd generation)" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -cl "$CL_URL" -clu "$CL_LGN" -clp "$CL_PWD" -cla "$CL_AID"
