--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,11 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: macos-11.0
+    runs-on: macos-12
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
       - name: Building
+        env:
+          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./scripts/build.sh
