--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,12 +13,13 @@ on:
 jobs:
   tests:
     name: Tests
-    runs-on: macos-11.0
+    runs-on: macos-12
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
       - name: Runing Tests
         env:
+          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           APP_KEY: ${{ secrets.TESTS_APP_KEY }}
           APP_SECRET: ${{ secrets.TESTS_APP_SECRET }}
           MASTER_SERVER_PUBLIC_KEY : ${{ secrets.TESTS_MASTER_SERVER_PUBLIC_KEY }}
@@ -28,4 +29,4 @@ jobs:
           CL_AID: ${{ secrets.TESTS_CL_AID }}
           OP_URL: ${{ secrets.TESTS_OP_URL }}
           ER_URL: ${{ secrets.TESTS_ER_URL }}
-        run: ./scripts/test.sh -destination "platform=iOS Simulator,OS=15.2,name=iPhone SE (2nd generation)" -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -cl "$CL_URL" -clu "$CL_LGN" -clp "$CL_PWD" -cla "$CL_AID"
+        run: ./scripts/test.sh -appkey "$APP_KEY" -appsecret "$APP_SECRET" -masterspk "$MASTER_SERVER_PUBLIC_KEY" -er "$ER_URL" -op "$OP_URL" -cl "$CL_URL" -clu "$CL_LGN" -clp "$CL_PWD" -cla "$CL_AID"
