--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ Library/
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 Carthage/Checkouts
 Carthage
+#ignoring gitmodules to disable dependency propagation of the carthage
+.gitmodules
 
 *.jar
 
