--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,10 @@ Library/
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
-#Carthage/Checkouts
+Carthage/Checkouts
 Carthage
+#ignoring gitmodules to disable dependency propagation of the carthage
+.gitmodules
 
 *.jar
 
