Upgraded dependencies and moved build configuration to xcconfigs

--- a/WultraMobileTokenSDK/ConfigFiles/Debug.xcconfig
+++ b/WultraMobileTokenSDK/ConfigFiles/Debug.xcconfig
@@ -16,4 +16,11 @@
 
 #include "WultraMobileTokenSDK/ConfigFiles/Config.xcconfig"
 
+SWIFT_ACTIVE_COMPILATION_CONDITIONS = DEBUG
+GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1 $(inherited)
+SWIFT_OPTIMIZATION_LEVEL = -Onone
+ONLY_ACTIVE_ARCH = YES
+DEBUG_INFORMATION_FORMAT = dwarf
+ENABLE_TESTABILITY = YES
+GCC_OPTIMIZATION_LEVEL = 0
 SWIFT_OPTIMIZATION_LEVEL = -Onone
