--- a/WultraMobileTokenSDK/ConfigFiles/Release.xcconfig
+++ b/WultraMobileTokenSDK/ConfigFiles/Release.xcconfig
@@ -15,3 +15,9 @@
 //
 
 #include "WultraMobileTokenSDK/ConfigFiles/Config.xcconfig"
+
+DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
+VALIDATE_PRODUCT = YES
+ENABLE_NS_ASSERTIONS = NO
+SWIFT_COMPILATION_MODE = wholemodule
+SWIFT_OPTIMIZATION_LEVEL = -O
