--- a/WultraMobileTokenSDK/ConfigFiles/Config.xcconfig
+++ b/WultraMobileTokenSDK/ConfigFiles/Config.xcconfig
@@ -15,29 +15,77 @@
 //
 
 // SWIFT
-SWIFT_VERSION = 5.7
+SWIFT_VERSION = 5.9
 SWIFT_SWIFT3_OBJC_INFERENCE = Off
 
 // SDK
 SDKROOT = iphoneos
 IPHONEOS_DEPLOYMENT_TARGET = 12.0
 
+// PRODUCT
+PRODUCT_BUNDLE_IDENTIFIER = com.wultra.WultraMobileTokenSDK
+PRODUCT_NAME = WultraMobileTokenSDK
+INFOPLIST_FILE = WultraMobileTokenSDK/Info.plist
+
 // FRAMEWORKS
 FRAMEWORK_SEARCH_PATHS = $(inherited) $(PROJECT_DIR)/Carthage/Build/
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/Frameworks @loader_path/Frameworks
 
-
-// MIRSC
-INFOPLIST_FILE = WultraMobileTokenSDK/Info.plist
+// MISC
 SKIP_INSTALL = YES
 TARGETED_DEVICE_FAMILY = 1
 DYLIB_COMPATIBILITY_VERSION = 1
 DYLIB_CURRENT_VERSION = 1
 DYLIB_INSTALL_NAME_BASE = @rpath
 DEFINES_MODULE = YES
-PRODUCT_BUNDLE_IDENTIFIER = com.wultra.WultraMobileTokenSDK
-PRODUCT_NAME = $(TARGET_NAME:c99extidentifier)
 CODE_SIGN_STYLE = Automatic
 DEVELOPMENT_TEAM = KTT9G859MR
 CLANG_ENABLE_MODULES = YES
 SUPPORTS_MACCATALYST = NO
+CODE_SIGN_IDENTITY =
+ENABLE_USER_SCRIPT_SANDBOXING = NO // we use swiftlint
+COPY_PHASE_STRIP = NO
+ALWAYS_SEARCH_USER_PATHS = NO
+CURRENT_PROJECT_VERSION = 1
+VERSIONING_SYSTEM = apple-generic
+GCC_NO_COMMON_BLOCKS = YES
+GCC_C_LANGUAGE_STANDARD = gnu11
+CLANG_CXX_LANGUAGE_STANDARD = gnu++14
+CLANG_ENABLE_MODULES = YES
+CLANG_ENABLE_OBJC_ARC = YES
+CLANG_ENABLE_OBJC_WEAK = YES
+ENABLE_STRICT_OBJC_MSGSEND = YES
+CLANG_WARN_BLOCK_CAPTURE_AUTORELEASING = YES
+CLANG_WARN_DOCUMENTATION_COMMENTS = YES
+CLANG_WARN_EMPTY_BODY = YES
+CLANG_WARN_BOOL_CONVERSION = YES
+CLANG_WARN_CONSTANT_CONVERSION = YES
+GCC_WARN_64_TO_32_BIT_CONVERSION = YES
+CLANG_WARN_ENUM_CONVERSION = YES
+CLANG_WARN_INT_CONVERSION = YES
+CLANG_WARN_NON_LITERAL_NULL_CONVERSION = YES
+CLANG_WARN_INFINITE_RECURSION = YES
+GCC_WARN_ABOUT_RETURN_TYPE = YES_ERROR
+CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER = YES
+CLANG_WARN_STRICT_PROTOTYPES = YES
+CLANG_WARN_COMMA = YES
+CLANG_WARN_UNGUARDED_AVAILABILITY = YES_AGGRESSIVE
+GCC_WARN_UNINITIALIZED_AUTOS = YES_AGGRESSIVE
+CLANG_WARN_UNREACHABLE_CODE = YES
+GCC_WARN_UNUSED_FUNCTION = YES
+GCC_WARN_UNUSED_VARIABLE = YES
+CLANG_WARN_RANGE_LOOP_ANALYSIS = YES
+CLANG_WARN_SUSPICIOUS_MOVE = YES
+CLANG_WARN_DIRECT_OBJC_ISA_USAGE = YES_ERROR
+CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
+CLANG_WARN_OBJC_LITERAL_CONVERSION = YES
+CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
+GCC_WARN_UNDECLARED_SELECTOR = YES
+CLANG_WARN_OBJC_ROOT_CLASS = YES_ERROR
+CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
+ENABLE_MODULE_VERIFIER = YES
+MODULE_VERIFIER_SUPPORTED_LANGUAGE_STANDARDS = gnu11 gnu++14
+MODULE_VERIFIER_SUPPORTED_LANGUAGES = objective-c objective-c++
+CLANG_ANALYZER_NONNULL = YES
+CLANG_ANALYZER_NUMBER_OBJECT_CONVERSION = YES_AGGRESSIVE
+CLANG_CXX_LIBRARY = libc++
