--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,16 @@ on:
       - master
       - releases/*
   pull_request:
-  schedule:
-    - cron:  '25 6 * * *'
 
 jobs:
   build:
     name: Build
-    runs-on: macos-12
+    runs-on: macos-13
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
       - name: Set proper xcode version
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '14.0'
+        run: sh ./scripts/xcodeselect.sh
       - name: Building
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
