--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,21 +10,19 @@ on:
 jobs:
   pod:
     name: Pod Lib Lint
-    runs-on: macos-12
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v2
-      - name: Lint
-        run: pod lib lint --allow-warnings
-  swift:
-    name: Swift Lint
-    runs-on: macos-12
+    runs-on: macos-13
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
       - name: Set proper xcode version
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '14.0'
+        run: sh ./scripts/xcodeselect.sh
       - name: Lint
-        run: swiftlint --strict
+        run: pod lib lint --allow-warnings
+  swift:
+    name: Swift Lint
+    runs-on: macos-13
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+      - name: Lint
+        run: sh ./scripts/swiftlint.sh
